--- a/HealthCareCenter/src/View_Layer/MedicineInsert.form
+++ b/HealthCareCenter/src/View_Layer/MedicineInsert.form
@@ -38,9 +38,17 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" attributes="0">
+              <Group type="102" alignment="1" attributes="0">
+                  <EmptySpace pref="320" max="32767" attributes="0"/>
+                  <Component id="btn_ok" min="-2" pref="65" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+                  <Component id="btn_cancel" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
+              </Group>
+              <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="lbl_supplier" max="32767" attributes="0"/>
                       <Component id="lbl_price" max="32767" attributes="0"/>
                       <Component id="lbl_quantity" alignment="0" max="32767" attributes="0"/>
                       <Component id="lbl_barcodeNumber" alignment="0" max="32767" attributes="0"/>
@@ -52,19 +60,11 @@
                       <Component id="txt_medicineName" pref="187" max="32767" attributes="0"/>
                       <Component id="txt_brandName" max="32767" attributes="0"/>
                       <Component id="txt_barcodeNumber" alignment="0" max="32767" attributes="0"/>
-                      <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                          <Component id="txt_price" alignment="0" max="32767" attributes="0"/>
-                          <Component id="txt_quantity" alignment="0" pref="100" max="32767" attributes="0"/>
-                      </Group>
+                      <Component id="txt_price" alignment="0" max="32767" attributes="0"/>
+                      <Component id="txt_quantity" alignment="0" pref="187" max="32767" attributes="0"/>
+                      <Component id="txt_supplier" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
-              </Group>
-              <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace pref="320" max="32767" attributes="0"/>
-                  <Component id="btn_ok" min="-2" pref="65" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
-                  <Component id="btn_cancel" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -96,7 +96,12 @@
                       <Component id="lbl_price" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="txt_price" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="108" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="lbl_supplier" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txt_supplier" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace pref="59" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="btn_ok" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btn_cancel" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -130,6 +135,7 @@
         <Component class="javax.swing.JLabel" name="lbl_price">
           <Properties>
             <Property name="text" type="java.lang.String" value="Price"/>
+            <Property name="verifyInputWhenFocusTarget" type="boolean" value="false"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txt_medicineName">
@@ -171,6 +177,16 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_cancelActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JLabel" name="lbl_supplier">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Supplier"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JTextField" name="txt_supplier">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txt_supplierActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
